<?xml version="1.0" encoding="utf-8"?>

<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/category_fragment">

    <fragment
        android:id="@+id/category_fragment"
        android:name="com.example.grocify.ui.CategoryFragment"
        android:label="@string/categories"
        tools:layout="@layout/category_fragment">

        <action
            android:id="@+id/action_category_fragment_to_products_fragment"
            app:destination="@id/products_fragment" />

    </fragment>

    <fragment
        android:id="@+id/products_fragment"
        android:name="com.example.grocify.ui.ProductsFragment"
        android:label="@string/products"
        tools:layout="@layout/recycler_fragment">

        <argument
            android:name="category"
            app:argType="string" />

        <action
            android:id="@+id/action_products_fragment_to_product_fragment"
            app:destination="@id/product_fragment" />

    </fragment>

    <fragment
        android:id="@+id/search_fragment"
        android:name="com.example.grocify.ui.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/recycler_fragment">

        <action
            android:id="@+id/action_search_fragment_to_product_fragment"
            app:destination="@id/product_fragment" />

    </fragment>

    <fragment
        android:id="@+id/cart_fragment"
        android:name="com.example.grocify.ui.CartFragment"
        android:label="@string/cart">

        <action
            android:id="@+id/action_cart_fragment_to_product_fragment"
            app:destination="@id/product_fragment" />

    </fragment>

    <fragment
        android:id="@+id/favorites_fragment"
        android:name="com.example.grocify.ui.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/recycler_fragment">

        <action
            android:id="@+id/action_favorites_fragment_to_product_fragment"
            app:destination="@id/product_fragment" />

    </fragment>

    <fragment
        android:id="@+id/product_fragment"
        android:name="com.example.grocify.ui.ProductFragment"
        android:label="@string/product"
        tools:layout="@layout/product_fragment">

        <argument
            android:name="productId"
            app:argType="string" />

        <argument
            android:name="productBrand"
            app:argType="string" />

    </fragment>

    <fragment
        android:id="@+id/profile_fragment"
        android:name="com.example.grocify.ui.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/profile_fragment">

        <action
            android:id="@+id/action_profile_fragment_to_past_purchases_fragment"
            app:destination="@id/past_transactions_fragment" />

    </fragment>

    <fragment
        android:id="@+id/past_transactions_fragment"
        android:name="com.example.grocify.ui.PastTransactionsFragment"
        android:label="@string/past_transactions"
        tools:layout="@layout/recycler_fragment" />

</navigation>